<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/movieContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/movieSummaryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:singleLine="false"
        android:text="@string/movie_summary"
        android:textColor="@color/lighter_gray"
        android:textSize="@dimen/summurary_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/movieImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/movieImageView"
        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDateTextView"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/movieDurationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/movie_duration"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/duration_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/movieTitleTextView"
        app:layout_constraintStart_toEndOf="@+id/movieTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/movieTitleTextView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/movieTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/movie_title"
        android:textColor="@color/gray"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movieImageView"
        app:layout_constraintTop_toBottomOf="@+id/movieImageView" />

    <TextView
        android:id="@+id/movieReleaseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_release_date"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/summurary_text_size"
        app:layout_constraintStart_toStartOf="@+id/movieTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView" />

    <ImageView
        android:id="@+id/movieImageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/poster_activity_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

</androidx.constraintlayout.widget.ConstraintLayout>
